@@ -1,2 +1,12 @@
 SHA256 (bash/bash-4.4.tar.gz) = d86b3392c1202e8ff5a423b302e6284db7f8f435ea9f39b5b1b20fd3ac36dfcb
 SIZE (bash/bash-4.4.tar.gz) = 9377313
+SHA256 (bash/bash44-001) = 3e28d91531752df9a8cb167ad07cc542abaf944de9353fe8c6a535c9f1f17f0f
+SIZE (bash/bash44-001) = 1896
+SHA256 (bash/bash44-002) = 7020a0183e17a7233e665b979c78c184ea369cfaf3e8b4b11f5547ecb7c13c53
+SIZE (bash/bash44-002) = 1946
+SHA256 (bash/bash44-003) = 51df5a9192fdefe0ddca4bdf290932f74be03ffd0503a3d112e4199905e718b2
+SIZE (bash/bash44-003) = 1593
+SHA256 (bash/bash44-004) = ad080a30a4ac6c1273373617f29628cc320a35c8cd06913894794293dc52c8b3
+SIZE (bash/bash44-004) = 2350
+SHA256 (bash/bash44-005) = 221e4b725b770ad0bb6924df3f8d04f89eeca4558f6e4c777dfa93e967090529
+SIZE (bash/bash44-005) = 1439
