@@ -18,6 +18,7 @@ Changes:
 - Upgrade php to 7.0.13.
 - Upgrade syncthing to 0.14.11.
 - Upgrade msmtp to 1.6.6.
+- Upgrade bash to 4.4 patch 5.
 
 Fixes:
 - Fix escaped characters in output.
